# crypto_quant_framework

./: .env  .gitignore  BackTest说明文档.md  BinanceClient交易所客户端说明文档.md  Bokeh报告和图表说明文档.md  DataFeed说明文档.md  Database数据库模块说明文档.md  ETH_USDT_1h_3y_converted.csv  ETH_USDT_5m_1year.csv  ExchangeClient交易所客户端说明文档.md  LiveEngine实盘引擎说明文档.md  OKX_ccxt_字段参考.md  README .md  README.md  Real实盘和测试网脚本说明文档.md  StrategyBase说明文档.md  api测试.py  cusum.py  dependencies.md  env.example  momentum_trend_strategy_report.html  pyproject.toml  recursive_cusum_reversion_strategy_report.html  requirements.txt  rolling_return_reversion_strategy_report.html  swap.py  平仓测试.py  数据模块说明文档.md  框架测试.py  绩效分析说明文档.md  项目依赖库说明文档.md
crypto_quant/: __init__.py  config.py  enums.py
crypto_quant_framework-main/: LiveEngine实盘引擎说明文档.md  Real实盘和测试网脚本说明文档.md  requirements.txt
dashboard/: app.py  import_dashboard_klines.py  run_recursive_cusum_backtest_to_db.py  seed_dashboard_demo_data.py  style.css
examples/: basic_strategy.md  basic_strategy.py  run_backtest.md  run_backtest.py  run_binance_testnet_balance.md  run_binance_testnet_balance.py  run_bokeh_report.md  run_bokeh_report.py  run_csv_backtest.md  run_csv_backtest.py  run_database_backtest.md  run_database_backtest.py  run_live.md  run_live.py  run_live_database_recorder.md  run_live_database_recorder.py  run_market_data_pipeline.md  run_market_data_pipeline.py  run_okx_testnet_balance.md  run_okx_testnet_balance.py  run_testnet_account_recorder.md  run_testnet_account_recorder.py  run_testnet_order_recorder.md  run_testnet_order_recorder.py  (+6 more)
(+53 files in other folders)
