[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-quant-framework"
version = "0.1.0"
description = "A Python framework for cryptocurrency quantitative trading research, backtesting, and live trading experiments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.4.0",
    "SQLAlchemy>=2.0.0",
    "PyMySQL>=1.1.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "bokeh>=3.0.0",
    "streamlit>=1.30.0",
]

[tool.setuptools.packages.find]
include = ["crypto_quant*"]
